# kinovazed

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CybathlonObjectives.json  KinovaMain.cpp  KinovaStartUp.sh  README.md  conanfile.txt  log
TCPServer/: CMakeLists.txt  TCPServer.h
_build/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
_build/src/: KinovaZED  Makefile  cmake_install.cmake
_build/test/: KinovaTest  LogTest  Makefile  cmake_install.cmake
include/: .gitignore  Command.h  CommandHandling.h  CommandSubscriber.h  Constants.h  ControlInterface.h  Coordinates.h  EnumUtils.h  Event.h  Exceptions.h  KinovaArm.h  KinovaStatus.h  Log.h  LogFile.h  Logging.h  MIS_Objective.h  MIS_ObjectivesFileHandler.h  Matrix.h  Objective.h  ObjectiveId.h  Origin.h  Paths.h.in  PositionHandling.h  Prefix.h  RoboRioProtocol.h  Sequence.h  State.h  StateMachine.h  TCPControlConnection.h  TCPControlInterface.h  TCPServer.h  ToString.h  Transition.h
include/comm/: Command.h  CommandInterface.h  CommandSubscriber.h  Heartbeat.h  Notification.h  TCPInterface.h
include/control/: CommandHandler.h  CoreController.h  CoreStateMachine.h  Event.h  HeartbeatGenerator.h  Objective.h  ObjectiveId.h  ObjectiveManager.h  PositionHandling.h  Sequence.h  State.h  StateMachine.h  Transition.h
include/hw/: Actor.h  Coordinates.h  KinovaArm.h  KinovaStatus.h  Origin.h
include/math/: Matrix.h
include/support/: Constants.h  EnumUtils.h  LineCommandFactory.h  Logging.h  Paths.h.in  Prefix.h  StringUtils.h  ToString.h
kinovaArm/: CMakeLists.txt  KinovaArm.cpp  KinovaArm.h
kinovaArm/positionHandling/: Makefile  cmake_install.cmake
logfiles/: log.txt
logfiles/archive/: log0000.txt  log0001.txt  log0002.txt  log0003.txt  log0004.txt  log0005.txt  log0006.txt  log0007.txt  log0008.txt  log0009.txt  log0010.txt  log0011.txt  log0012.txt  log0013.txt  log0014.txt  log0015.txt  log0016.txt  log0017.txt  log0018.txt  log0019.txt  log0020.txt  log0021.txt  log0022.txt  log0023.txt  log0024.txt  log0025.txt  log0026.txt  log0027.txt  log0028.txt  log0029.txt  log0030.txt  log0031.txt  log0032.txt  log0033.txt  log0034.txt  log0035.txt  log0036.txt  log0037.txt  log0038.txt  log0039.txt  (+45 more)
positionHandling/: CMakeLists.txt  PositionHandling.cpp  PositionHandling.h
src/: CMakeLists.txt  Command.cpp  CommandHandling.cpp  CommandHandling.h  ControlInterface.cpp  Coordinates.cpp  Event.h  KinovaArm.cpp  KinovaArm.h  KinovaArmTemp.h  KinovaMain.cpp  Log.h  LogFile.cpp  LogFile.h  Logging.cpp  Objective.cpp  ObjectiveId.cpp  Origin.cpp  PositionHandling.cpp  PositionHandling.h  Positions.h  Sequence.cpp  State.cpp  State.h  StateMachine.cpp  StateMachine.h  TCPControlInterface.cpp  TCPServer.cpp  TCPServer.h  Transition.h
src/comm/: Command.cpp  CommandInterface.cpp  Heartbeat.cpp  Notification.cpp  TCPInterface.cpp
src/control/: CommandHandler.cpp  CommandHandling.cpp  CoreController.cpp  CoreStateMachine.cpp  HeartbeatGenerator.cpp  Objective.cpp  ObjectiveId.cpp  ObjectiveManager.cpp  PositionHandling.cpp  Sequence.cpp  State.cpp  StateMachine.cpp
src/hw/: Actor.cpp  Coordinates.cpp  KinovaArm.cpp  KinovaArmActor.cpp  KinovaArmPrivate.cpp  Origin.cpp
src/support/: LineCommandFactory.cpp  Logging.cpp
support/objectives/: Cybathlon.json  CybathlonObjectives.json
support/scripts/: KinovaStartUp
support/systemd/: kinovazed.service.in
test/: CMakeLists.txt  EventIOFake.h  IntegrationSuite.cpp  IntegrationSuite.h  KinovaArmSuite.cpp  KinovaArmSuite.h  KinovaTest.cpp  Log.h  LogFile.h  LogTest.cpp  LogTestSubClass.h  MatrixHelper.h  MatrixSuite.cpp  MatrixSuite.h  PositionHandlingSuite.cpp  PositionHandlingSuite.h  SequenceSuite.cpp  SequenceSuite.h  TimesLiteral.h
test/include/: EventIOFake.h  IntegrationSuite.h  KinovaArmSuite.h  MatrixHelper.h  MatrixSuite.h  PositionHandlingSuite.h  SequenceSuite.h  TimesLiteral.h
test/src/: IntegrationSuite.cpp  KinovaArmSuite.cpp  KinovaTest.cpp  MatrixSuite.cpp  PositionHandlingSuite.cpp  SequenceSuite.cpp
